src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Banker</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>QL Lead</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Scenario Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Run Scenario</fullName>
        </values>
        <values>
            <fullName>Saved Scenario</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Scenario Converted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Attempted to Contact</fullName>
        </values>
        <values>
            <fullName>Company Closed</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
        <values>
            <fullName>Open Lead</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Presented</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Activity_Timeline__c</fullName>
        <formula>if((today()-Last_Activity_Date__c)&lt;2,"24 Hours",
if((today()-Last_Activity_Date__c)&lt;8,"7 Days",
if((today()-Last_Activity_Date__c)&lt;15,"Weeks Ago",
"Carrier Pigeon")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Timeline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_PCS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned PCS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attempted_to_Contact_Days__c</fullName>
        <label>Attempted to Contact Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Growth_Rate__c</fullName>
        <label>Average Growth Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Banker_Common_Id__c</fullName>
        <label>Banker Common Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <label>Billing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_12_Months_Amount__c</fullName>
        <label>Cash Flow 12 Months Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_2_Month_Number__c</fullName>
        <label>Cash Flow 2 Month Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_60_Months_Amount__c</fullName>
        <label>Cash Flow 60 Months Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Remaining_Month__c</fullName>
        <label>Cash Flow Remaining Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Remaining_Months_Amount__c</fullName>
        <label>Cash Flow Remaining Months Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cell__c</fullName>
        <label>Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Client Name</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_NMLS_ID__c</fullName>
        <label>Company NMLS ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Mortgage_Balance__c</fullName>
        <label>Current Mortgage Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Mortgage_Interest_Rate__c</fullName>
        <label>Current Mortgage Interest Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Home_Value__c</fullName>
        <label>Estimated Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <label>Ext</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Business Partner Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Federal_Tax_ID_EIN__c</fullName>
        <label>Federal Tax ID/EIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Value_10_Years__c</fullName>
        <label>Home Value 10 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Initial_Growth_Rate__c</fullName>
        <label>Initial Growth Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsLeadCreatedFromPortal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsLeadCreatedFromPortal</description>
        <inlineHelpText>checked means, Lead is created from Portal</inlineHelpText>
        <label>Is Lead Created From Portal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_primary_contact_a_portal_user__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is primary contact a portal user?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Killed_Date__c</fullName>
        <label>Killed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Killed_Lead__c</fullName>
        <label>Killed Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity_Date_Time__c</fullName>
        <label>Last Activity Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Type__c</fullName>
        <label>Last Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <label>Last Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Attempted_Con_Days__c</fullName>
        <formula>Today() - Lead_status_change_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Attempted Con Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Name__c</fullName>
        <formula>Owner:User.FirstName +' '+ Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Phone__c</fullName>
        <formula>Owner:User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_status_change_date__c</fullName>
        <label>Lead status change date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>Loan</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MIP__c</fullName>
        <label>MIP</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Mortgage_Payment__c</fullName>
        <label>Monthly Mortgage Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Activity_Days__c</fullName>
        <formula>TODAY() -  Last_Activity_Date__c</formula>
        <label>No Activity Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_QLMS_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non QLMS Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Loan_Officers__c</fullName>
        <label>Number of Loan Officers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORM_Account_Executive__c</fullName>
        <label>ORM Account Executive</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORM_App_Date__c</fullName>
        <label>ORM App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ORM_Loan_Number__c</fullName>
        <label>ORM Loan Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Orm_Banker__c</fullName>
        <label>Orm Banker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orm_Folder_Date__c</fullName>
        <label>Orm Folder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Cell__c</fullName>
        <label>Other Contact Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Email__c</fullName>
        <label>Other Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Name__c</fullName>
        <label>Other Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Phone__c</fullName>
        <label>Other Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Title__c</fullName>
        <label>Other Contact Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Branch Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Secondary Market</fullName>
                </value>
                <value>
                    <fullName>Post Close Contact</fullName>
                </value>
                <value>
                    <fullName>Assistant Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processing Manager</fullName>
                </value>
                <value>
                    <fullName>Third Party Closer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Source__c</fullName>
        <label>Other Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PardotTestSahitya__c</fullName>
        <label>PardotTestSahitya</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pardot_list_id__c</fullName>
        <label>Pardot_list_id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Individual</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_QL_Status__c</fullName>
        <label>Previous QL Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone_Number__c</fullName>
        <label>Primary Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Title__c</fullName>
        <label>Primary Contact Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Branch Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Secondary Market</fullName>
                </value>
                <value>
                    <fullName>Post Close Contact</fullName>
                </value>
                <value>
                    <fullName>Assistant Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processing Manager</fullName>
                </value>
                <value>
                    <fullName>Third Party Closer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_contact_name__c</fullName>
        <label>Primary contact name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Limit__c</fullName>
        <label>Principal Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLMSLOCount__c</fullName>
        <label>QLMS LO Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QLMSLeadRegistrationCount__c</fullName>
        <label>QLMS Lead Registration Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QLMSSFDCBankID__c</fullName>
        <label>QLMS SFDC Bank ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLMS_AE_Email__c</fullName>
        <description>Used to send email alerts to QLMS when lead status is updated</description>
        <label>QLMS AE Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QLMS_Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QLMS Account Executive</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>QLMS_AE__c.isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QLMS_AE__c</referenceTo>
        <relationshipLabel>QLMS Account Executive</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QLMS_First_Name__c</fullName>
        <formula>LEFT(QLMS_Account_Executive__r.Name, FIND(" ", QLMS_Account_Executive__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLMS First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLMS_Last_Registration_Date__c</fullName>
        <label>QLMS Last Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ql_Banker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ql Banker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ql_Loan_Number__c</fullName>
        <label>Ql Loan Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Not_being_Interested__c</fullName>
        <label>Not Interested/Qualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Reverse Product</fullName>
                </value>
                <value>
                    <fullName>Happy with Other Reverse Lenders</fullName>
                </value>
                <value>
                    <fullName>States Available</fullName>
                </value>
                <value>
                    <fullName>Waiting for Purchase</fullName>
                </value>
                <value>
                    <fullName>Not Signing Up with New Lenders</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Scenario_Package_Count__c</fullName>
        <label>Request Scenario Package Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScenarioId__c</fullName>
        <label>ScenarioId</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Cell__c</fullName>
        <label>Secondary Contact Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Email__c</fullName>
        <label>Secondary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Name__c</fullName>
        <label>Secondary Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Phone__c</fullName>
        <label>Secondary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Title__c</fullName>
        <label>Secondary Contact Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Principal</fullName>
                </value>
                <value>
                    <fullName>Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processor</fullName>
                </value>
                <value>
                    <fullName>Branch Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Secondary Market</fullName>
                </value>
                <value>
                    <fullName>Post Close Contact</fullName>
                </value>
                <value>
                    <fullName>Assistant Loan Officer</fullName>
                </value>
                <value>
                    <fullName>Processing Manager</fullName>
                </value>
                <value>
                    <fullName>Third Party Closer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>States_they_would_like_to_do_Business_in__c</fullName>
        <label>States they would like to do Business in</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Send Letter</fullName>
                </value>
                <value>
                    <fullName>Send Quote</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskPriority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Date__c</fullName>
        <label>Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Organization__c</fullName>
        <label>Type of Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                    <default>true</default>
                    <label>Bank</label>
                </value>
                <value>
                    <fullName>Credit Union</fullName>
                </value>
                <value>
                    <fullName>Mortgage Banking Entity</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeofScenario__c</fullName>
        <label>Type of Scenario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Run Scenario</fullName>
                </value>
                <value>
                    <fullName>Saved Scenario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Account_Executive_Name__r.Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ORM Account Executive Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Account Executive/PCS</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>DMB - Jesse, DMB - Josh</value>
            </filterItems>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>wORMS, Braveheart</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>